parser/testdata/golden/error_syntax_enum_body.expected
ERROR: syntax error at line 2, column 9: expected IntLit, found ','
