parser/testdata/golden/error_syntax_enum_body.fbs
enum Color : byte {
  Red = ,
  Green,
}
